    non-existent directories). (vhuk)

- SPL:
  . Fixed bug #72122 (IteratorIterator breaks '@' error suppression). (kinglozzer)
  . Fixed bug #72646 (SplFileObject::getCsvControl does not return the escape
    character). (cmb)

- SQLite3:
  . Implemented FR #72653 (SQLite should allow opening with empty filename).
    (cmb)

21 Jul 2016, PHP 5.6.24

- Core:
  . Fixed bug #71936 (Segmentation fault destroying HTTP_RAW_POST_DATA).
    (mike dot laspina at gmail dot com, Remi)
  . Fixed bug #72496 (Cannot declare public method with signature incompatible
    with parent private method). (Pedro Magalhães)
  . Fixed bug #72138 (Integer Overflow in Length of String-typed ZVAL). (Stas)
  . Fixed bug #72513 (Stack-based buffer overflow vulnerability in
    virtual_file_ex). (loianhtuan at gmail dot com)
  . Fixed bug #72562 (Use After Free in unserialize() with Unexpected Session
    Deserialization). (taoguangchen at icloud dot com)
  . Fixed bug #72573 (HTTP_PROXY is improperly trusted by some PHP libraries and
    applications). (CVE-2016-5385) (Stas)

- bz2:
  . Fixed bug #72447 (Type Confusion in php_bz2_filter_create()). (gogil at
    stealien dot com).
  . Fixed bug #72613 (Inadequate error handling in bzread()). (Stas)

- Date:
  . Fixed bug #66836 (DateTime::createFromFormat 'U' with pre 1970 dates fails
    parsing). (derick)

- EXIF:
  . Fixed bug #50845 (exif_read_data() returns corrupted exif headers).
    (Bartosz Dziewoński)
- EXIF:
  . Fixed bug #72603 (Out of bound read in exif_process_IFD_in_MAKERNOTE).
    (Stas)
  . Fixed bug #72618 (NULL Pointer Dereference in exif_process_user_comment).
    (Stas)

- GD:
  . Fixed bug #43475 (Thick styled lines have scrambled patterns). (cmb)
  . Fixed bug #53640 (XBM images require width to be multiple of 8). (cmb)
  . Fixed bug #64641 (imagefilledpolygon doesn't draw horizontal line). (cmb)
  . Fixed bug #72512 (gdImageTrueColorToPaletteBody allows arbitrary write/read
    access). (Pierre)